<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/dialog_ll">

    <TextView
        style="@style/base_tv_black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_8"
        android:padding="@dimen/space_8"
        android:text="@string/the_latest_version"/>

    <TextView
        android:id="@+id/tv_updateInfo"
        style="@style/base_tv_gray"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/space_8"/>

    <LinearLayout
        style="@style/base_ll_mw_h"
        android:paddingBottom="@dimen/space_8"
        android:paddingLeft="@dimen/space_8"
        android:paddingRight="@dimen/space_8">

        <Button
            android:id="@+id/btn_left"
            style="@style/btn_main_blue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/update_now"/>

        <Button
            android:id="@+id/btn_right"
            style="@style/btn_main_blue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/update_later"/>
    </LinearLayout>

</LinearLayout>